classDiagram
  direction LR
  class Point {
    +x : number
    +y : number
  }
  class Direction {
    <<enumeration>>
    up
    down
    left
    right
  }
  class TileType {
    <<enumeration>>
    wall
    floor
    corridor
    door
    chest
    stairs
    rubble
    merchant
    trap
  }
  class Room {
    +id : number
    +name : string
    +x0 : number
    +y0 : number
    +x1 : number
    +y1 : number
  }
  class LogEntry {
    +id : number
    +text : string
  }
  class CombatFloat {
    +id : number
    +x : number
    +y : number
    +amount : number
    +tone : damage / heal / miss / level
  }
  class Projectile {
    +id : number
    +fromX : number
    +fromY : number
    +toX : number
    +toY : number
    +kind : arrow
  }
  class InventoryItem {
    +id : number
    +kind : ItemKind
  }
  class FloorItem {
    +id : number
    +x : number
    +y : number
    +kind : ItemKind / gold
    +amount : number
  }
  class Equipment {
    +weapon : number / null
    +armor : number / null
    +rings : number[]
    +amulet : number / null
  }
  class AttackKind {
    <<enumeration>>
    melee
    ranged
    spell
  }
  class AttackProfile {
    +accuracy : number
    +minDamage : number
    +maxDamage : number
  }
  class AttackProfiles {
    <<type>>
    Record«AttackKind, AttackProfile»
  }
  class Enemy {
    +id : number
    +kind : EnemyKind
    +x : number
    +y : number
    +hp : number
    +maxHp : number
    +accuracy : number
    +damage : number
    +xp : number
    +room : number
  }
  class GameStatus {
    <<enumeration>>
    idle
    playing
    dead
  }
  class HeroStats {
    +maxHp : number
    +attacks : AttackProfiles
  }
  class CombatStats {
    +defense : number
  }
  class LeveledStats {
    +level : number
    +xp : number
    +hp : number
  }
  class Dungeon {
    +cols : number
    +rows : number
    +tiles : TileType[][]
    +rooms : Room[]
    +playerStart : Point
    +enemies : Enemy[]
    +items : FloorItem[]
    +shop : DungeonShop / null
  }
  class ShopItem {
    +id : number
    +kind : ItemKind
  }
  class DungeonShop {
    +room : number
    +merchant : Point
    +stock : ShopItem[]
  }
  class EnemyKind {
    <<enumeration>>
    bat
    kobold
    spider
    direWolf
    skeleton
    goblin
    orc
    ogre
    troll
    wraith
  }
  class EnemyInfo {
    +name : string
    +description : string
    +maxHp : number
    +accuracy : number
    +damage : number
    +verb : string
    +xp : number
    +minDepth : number
  }
  class ItemCategory {
    <<enumeration>>
    weapon
    armor
    ring
    amulet
    potion
  }
  class ItemKind {
    <<enumeration>>
    dagger
    shortSword
    longSword
    battleAxe
    clothes
    leather
    chainmail
    plate
    ringOfProtection
    ringOfPower
    ringOfPrecision
    amuletOfHealth
    amuletOfValor
    healthPotion
  }
  class ItemDef {
    +name : string
    +category : ItemCategory
    +meleeDamage : number
    +meleeAccuracy : number
    +defense : number
    +maxHp : number
    +heal : number
    +value : number
    +stackable : boolean
  }
  InventoryItem --> ItemKind : kind
  FloorItem --> ItemKind : kind
  AttackProfiles --> AttackKind
  AttackProfiles --> AttackProfile
  Enemy --> EnemyKind : kind
  HeroStats --> AttackProfiles : attacks
  HeroStats <|-- CombatStats
  CombatStats <|-- LeveledStats
  Dungeon --> TileType : tiles
  Dungeon --> Room : rooms
  Dungeon --> Point : playerStart
  Dungeon --> Enemy : enemies
  Dungeon --> FloorItem : items
  Dungeon --> DungeonShop : shop
  ShopItem --> ItemKind : kind
  DungeonShop --> Point : merchant
  DungeonShop --> ShopItem : stock
  ItemDef --> ItemCategory : category
